# OOP-Space-Shooter

./: README.md  main.py  pyproject.toml
src/: config.py  entities.py  managers.py
